# State-Estimation-And-Tracking

./: .gitignore  README.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/notes/: eskf_cpp_ros2_writeup.md  kitti_ins_writeup.md  ukf_vs_eskf_kitti.md
docs/superpowers/specs/: 2026-06-07-stage-1-foundation-highrate-design.md
prototypes/matlab/: ekf_synthetic.m  imm_synthetic.m  linear_kf.m  ukf_synthetic.m
prototypes/python/: ekf_synthetic.py  eskf.py  frames.py  imm_synthetic.py  imu_mechanization.py  kitti_highrate_loader.py  kitti_loader.py  linear_kf.py  requirements.txt  so3.py  ukf_kitti.py  ukf_synthetic.py
prototypes/python/tests/: conftest.py  test_eskf.py  test_filter_invariants.py  test_frames.py  test_imu_mechanization.py  test_kitti_highrate_loader.py  test_kitti_loader.py  test_kitti_loader_integration.py  test_run_single_trial_smoke.py  test_so3.py  test_ukf_kitti.py
ros2_ws/src/kf_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/kf_bringup/config/: eskf_kitti.yaml
ros2_ws/src/kf_bringup/kf_bringup/: __init__.py  kitti_replay.py
ros2_ws/src/kf_bringup/launch/: eskf_kitti.launch.py
ros2_ws/src/kf_common/: CMakeLists.txt  package.xml
ros2_ws/src/kf_common/include/kf_common/: so3.hpp
ros2_ws/src/kf_common/test/: test_so3.cpp
ros2_ws/src/kf_eskf/: CMakeLists.txt  package.xml
ros2_ws/src/kf_eskf/include/kf_eskf/: eskf.hpp
ros2_ws/src/kf_eskf/src/: eskf_node.cpp
ros2_ws/src/kf_eskf/test/: test_eskf.cpp
ros2_ws/src/kf_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/kf_msgs/msg/: Detection.msg  DetectionArray.msg  EgoState.msg  Track.msg  TrackArray.msg
