<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kf_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, config, and KITTI replay node for the kf_eskf filter stack.</description>
  <maintainer email="info@prandtldynamics.com">Derek Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kf_msgs</exec_depend>
  <exec_depend>kf_eskf</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
