<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kf_eskf</name>
  <version>0.1.0</version>
  <description>ROS-independent 15-state error-state EKF (IMU predict + GPS update), ported from the Python prototype.</description>
  <maintainer email="info@prandtldynamics.com">Derek Wang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Math kernel: SO(3) helpers and Eigen. -->
  <depend>kf_common</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>

  <!-- ROS node dependencies. -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kf_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
